add github action

--- a/configs/mainconf.ini
+++ b/configs/mainconf.ini
@@ -34,6 +34,6 @@ API_KEY = googleapikey
 
 #Used for failover messages and program exits notifcation
 [DISCORD]
-ENABLE = FALSE
-USERNAME = usernamehere
+ENABLE = TRUE
+USERNAME = jonesbooned#1111
 URL = webhookurl
