--- a/configs/plane1.ini
+++ b/configs/plane1.ini
@@ -1,6 +1,6 @@
 [DATA]
 #Plane to track, based of ICAO or ICAO24 which is the unique transponder address of a plane.
-ICAO = icaohere
+ICAO = N628TS
 
 #Optional Per Plane Override                                                                                    
 #DATA_LOSS_MINS = 20
@@ -33,10 +33,10 @@ API_KEY = apikey
 CHANNEL_TAG = channeltag
 
 [DISCORD]
-ENABLE = FALSE
+ENABLE = TRUE
 #WEBHOOK URL https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
 URL = webhookurl
 #Role to tag optional, the role ID
 ROLE_ID =
-Title =
+Title = N628TS
 USERNAME = plane-notify
