--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,6 +12,13 @@ jobs:
 
     - uses: actions/checkout@v2
 
+    - run: |
+        sed -i "s/webhookurl/$LOG_DISCORD_WEBHOOK_URL/g" configs/mainconf
+        sed -i "s/webhookurl/$DISCORD_WEBHOOK_URL/g" configs/plane1
+      env:
+        LOG_DISCORD_WEBHOOK_URL: ${{ secrets.LOG_DISCORD_WEBHOOK_URL }}
+        DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+
     - run: docker build -t plane-notify .
     
     - run: docker run plane-notify
