--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,5 +1,3 @@
-name: Run
-
 on: 
   workflow_dispatch:
 #   schedule:
@@ -12,6 +10,8 @@ jobs:
 
     - uses: actions/checkout@v2
 
+    - run: docker pull ghcr.io/${GITHUB_REPOSITORY}:githubactions
+
     - run: |
         sed -i "s|webhookurl|${LOG_DISCORD_WEBHOOK_URL}|g" configs/mainconf.ini
         sed -i "s|webhookurl|${DISCORD_WEBHOOK_URL}|g" configs/plane1.ini
@@ -19,6 +19,11 @@ jobs:
         LOG_DISCORD_WEBHOOK_URL: ${{ secrets.LOG_DISCORD_WEBHOOK_URL }}
         DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
-    - run: docker build -t plane-notify .
+    - run: docker build -t ghcr.io/${GITHUB_REPOSITORY}:githubactions .
     
     - run: docker run plane-notify
+
+    - run: docker login -u publisher -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
+
+    - run: docker push ghcr.io/${GITHUB_REPOSITORY}:githubactions
+
