add GITHUB_TOKEN perms

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,6 +4,9 @@ on:
 #     - cron: '*/15 * * * *'
 
 jobs:
+  permissions:
+    contents: read
+    packages: write
   run:
     runs-on: ubuntu-latest
     steps:
