--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,8 +4,8 @@ on:
 #     - cron: '*/15 * * * *'
 
 permissions:
-    contents: read
-    packages: write
+  contents: read
+  packages: write
 
 jobs:
   run:
@@ -14,7 +14,7 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - run: docker login -u publisher -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
+    - run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - run: docker pull ghcr.io/${GITHUB_REPOSITORY}:githubactions
 
