--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -25,7 +25,7 @@ jobs:
 
     - run: docker pull ghcr.io/${GITHUB_REPOSITORY}:githubactions || docker build -t ghcr.io/${GITHUB_REPOSITORY}:githubactions .
     
-    - run: docker run plane-notify:githubactions
+    - run: docker run ghcr.io/${GITHUB_REPOSITORY}:githubactions
 
     - run: docker push ghcr.io/${GITHUB_REPOSITORY}:githubactions
 
