--- a/configs/mainconf.ini
+++ b/configs/mainconf.ini
@@ -35,5 +35,5 @@ API_KEY = googleapikey
 #Used for failover messages and program exits notifcation
 [DISCORD]
 ENABLE = TRUE
-USERNAME = jonesbooned#1111
+USERNAME = plane-notify
 URL = webhookurl
