--- a/configs/plane2.ini
+++ b/configs/plane2.ini
@@ -1,6 +1,6 @@
 [DATA]
 #Plane to track, based of ICAO or ICAO24 which is the unique transponder address of a plane.
-ICAO = N628TS
+ICAO = N502SX
 
 #Optional Per Plane Override                                                                                    
 #DATA_LOSS_MINS = 20
@@ -39,5 +39,5 @@ URL = webhookurl
 URL = webhookurl
 #Role to tag optional, the role ID
 ROLE_ID =
-Title = N628TS
+Title = N502SX
 USERNAME = plane-notify
